Updates from Overleaf

--- a/sec/acronyms.tex
+++ b/sec/acronyms.tex
@@ -27,6 +27,7 @@
 \newacronym{owasp}{OWASP}{Open Web Application Security Project}
 
 %%random
+\newacronym{http}{HTTP}{Hyper Text Transfer Protocol}
 \newacronym{https}{HTTPS}{Hyper Text Transfer Protocol Secure}
 \newacronym{ssl}{SSL}{Secure Sockets Layer}
 \newacronym{tls}{TLS}{Transport Layer Security}
