Updates from Overleaf

--- a/sec/acronyms.tex
+++ b/sec/acronyms.tex
@@ -9,6 +9,7 @@
 \newacronym{ap}{AP}{Administração Pública}
 \newacronym{lc}{LC}{Lista Consolidada}
 \newacronym{cc}{CC}{Cartão de Cidadão}
+\newacronym{bi}{BI}{Bilhete de Identidade}
 \newacronym{cmd}{CMD}{Chave Móvel Digital}
 \newacronym{ama}{AMA}{Agência para a Modernização Administrativa}
 \newacronym{pki}{PKI}{Public key infrastucture}
