--- a/sections/2_sota.tex
+++ b/sections/2_sota.tex
@@ -1045,15 +1045,54 @@ pAR+Z3kctgfUVHton0cwJQ==
 \newpage
 \section{Cartão de Cidadão}
 
+O Cartão de CIdadão (\gls{cc}) é um documento de identificação da cidadina portuguesa, desenvolvido durante o governo de José Sócrates\footnote{Mais informação em \url{https://pt.wikipedia.org/wiki/Cartão_de_cidadão}.}, tendo a primeira emissão do mesmo ocorrido em 2006/2007 numa fase experimental na Região Autónoma dos Açores, seguido da emissão a nível nacional em 2008.
+
 \begin{figure}[h]
     \centering
     \includegraphics[width=\textwidth]{img/cc/CartaoCidadao.png}
     \caption{Exemplo de um Cartão de Cidadão\cite{ccPic}.}
 \end{figure}
 
-\subsection{Funcionamento do Cartão de Cidadão}
+O objetivo do Cartão de Cidadão não se cinge a uma simples substituição \gls{bi}, mas sim à agregação de vários documentos pessoais do cidadão, nomeadamente:
 
-\subsection{Especificação do Cartão de Cidadão}
+\begin{itemize}
+    \item Cartão de contribuinte.
+    \item Cartão de eleitor.
+    \item Cartão de beneficiário da Segurança Social.
+    \item Cartão de utente do Serviço Nacional de Saúde.
+\end{itemize}
+
+O Cartão de Cidadão foi desenvolvido com as várias normas internacionais em mente, para que este seja reconhecido como um documento de identificação e de viagem.
+
+Dito isto, é importante referir que o Cartão de Cidadão é mais do que um simples documento. Este foi concebido para ser um documento inteligente, ou seja, um \emph{smartcard}, sendo dotado de um chip embutido na sua construção plástica.
+
+A invenção do \emph{smartcard} pode ser atribuida a Helmut Gröttrup e Jürgen Dethloff\footnote{Mais informação em \url{http://www.historyofinformation.com/detail.php?id=2317}} em 1968 pela criação de um chip capaz de caber num bolso, sendo adaptado para um cartão plástico por Michel Ugon em 1977.
+
+Desde 1977 ocorreu uma evolução deste tipo de cartões, podendo os mesmos ser divididos em quatro categorias:
+
+\begin{itemize}
+    \item Cartões com microprocessador.
+    \item Cartões de memória.
+    \item Cartões óticos.
+    \item Cartões de banda magnética.
+\end{itemize}
+
+O Cartão de Cidadão está inserido na primeira categoria, Cartões com microprocessador, sendo alvo de uma explicação mais detalhada na secção \ref{espCC}. 
+
+Sendo utilizado como documento físico, este permite a um cidadão identificar-se presencialmente de forma segura. Como documento tecnológico, permite ao seu portador identificar-se perante serviços informatizados e autenticar documentos eletrónicos.
+
+Outro propósito da criação do Cartão de Cidadão foi melhorar o nível de segurança associado aos cartões de identificação, de forma a diminuir e evitar falsificações dos mesmos.
+
+O chip presente no Cartão de Cidadão permite guardar dados pessoais do titular, garantindo a privacidade e segurança dos mesmos. Por exemplo, impede acessos indevidos a dados médicos do titular por parte de trabalhadoras da Segurança Social, visto cada entidade só ter acesso aos dados que lhe dizem respeito, de modo a evitar o uso indevido dos dados do titular, bem como uso indevido de poder.
+
+\subsection{Funcionamento do Cartão de Cidadão} \label{funcCC}
+ 
+O funcionamento do 
+
+\subsection{Especificação do Cartão de Cidadão} \label{espCC}
+
+Este tipo de cartão está dotado de capacidades de processamento bem como memória embutida que permite o armazenamento de uma estrutura \gls{pki}.
+
 
 \cleardoublepage
 \section{API de dados}
