--- a/sec/acronyms.tex
+++ b/sec/acronyms.tex
@@ -45,3 +45,11 @@
 \newacronym{oasis}{OASIS}{Organization for the Advancement of Structured Information Standards}
 \newacronym{sso}{SSO}{Single-Sign On}
 \newacronym{itu}{ITU}{International Telecommunication Union}
+\newacronym{eeprom}{EEPROM}{Electrically-Erasable Programmable Read-Only Memory}
+\newacronym{jvm}{JVM}{Java Virtual Machine}
+\newacronym{puk}{PUK}{Pin Unlock Key}
+\newacronym{des}{DES}{Data Encryption Standard}
+\newacronym{tdes}{TDES}{Triple Data Encryption Standard}
+\newacronym{mac}{MAC}{Message Authentication Code}
+\newacronym{pkcs}{PKCS}{Public-Key Cryptography Standards}
+\newacronym{cap}{CAP}{Chip Authentication Program}
