Solucao do auth local e auth cc

--- a/dissertation.sty
+++ b/dissertation.sty
@@ -368,7 +368,7 @@
 \\\withboldnewsgott{\large\@subtitleA}
 \\\withboldnewsgott{\large\@subtitleB}
 \\\rule{0pt}{4.2cm}
-\\\optionalwithnewsgott{\large Dissertação de Mestrado}
+\\\optionalwithnewsgott{\large Disserta\c{c}\~{a}o de Mestrado}
 \\\optionalwithnewsgott{\large Mestrado Integrado em \@masterdegree}
 \\\rule{0pt}{6mm}
 \\\optionalwithnewsgott{\large Trabalho efectuado sob orienta\c{c}\~{a}o de}
